--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "JAM2023-2.sln"
+    "dotnet.defaultSolution": "JAM2023.sln"
 }
