--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,13 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-<<<<<<< HEAD
-<<<<<<< HEAD
+    "JAM2023-2.sln>>>>>>>d248b22(mergeattempt)=======dotnet.defaultSolution": "JAM2023.sln>>>>>>>e1cca27(AntoConfirmPullandpushtomain)",
     "dotnet.defaultSolution": "JAM2023.sln"
-=======
-    "dotnet.defaultSolution": "JAM2023-2.sln"
->>>>>>> d248b22 (merge attempt)
-=======
-    "dotnet.defaultSolution": "JAM2023.sln"
->>>>>>> e1cca27 (Anto Confirm Pull and push to main)
 }
